--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -23,13 +23,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 2
-      - run: git checkout HEAD^
 
       # Runs a single command using the runners shell
       - name: Update README.md
         run: echo "another line" >> README.md
+        
+      - name: Extract branch name
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
 
       # Runs a set of commands using the runners shell
       - name: Push update
@@ -38,4 +39,4 @@ jobs:
           git config user.email alex.avilx@icloud.com
           git add README.md
           git commit -m "Update README.md"
-          git push
+          git push origin ${{ steps.extract_branch.outputs.branch }}
