--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -29,7 +29,7 @@ jobs:
         run: echo "another line" >> README.md
         
       - name: Extract branch name
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF##*/})"
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_BASE_REF##*/})"
         id: extract_branch
 
       # Runs a set of commands using the runners shell
