--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -29,14 +29,17 @@ jobs:
         run: echo "another line" >> README.md
         
       - name: Extract branch name
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_BASE_REF##*/})"
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_BASE_REF#refs/heads/})"
         id: extract_branch
+        
+      - name: echo
+        run: echo ${{ steps.extract_branch.outputs.branch }}
 
       # Runs a set of commands using the runners shell
-      - name: Push update
-        run: |
-          git config user.name alex-avila
-          git config user.email alex.avilx@icloud.com
-          git add README.md
-          git commit -m "Update README.md"
-          git push origin ${{ steps.extract_branch.outputs.branch }}
+#       - name: Push update
+#         run: |
+#           git config user.name alex-avila
+#           git config user.email alex.avilx@icloud.com
+#           git add README.md
+#           git commit -m "Update README.md"
+#           git push origin ${{ steps.extract_branch.outputs.branch }}
