--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -29,11 +29,14 @@ jobs:
         run: echo "another line" >> README.md
         
       - name: Extract branch name
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_BASE_REF#refs/heads/})"
+        run: |
+          echo "${GITHUB_BASE_REF}"
+          echo "${GITHUB_BASE_REF#refs/heads/}"
+          echo "##[set-output name=branch;]$(echo ${GITHUB_BASE_REF#refs/heads/})"
         id: extract_branch
         
       - name: echo
-        run: echo ${{ steps.extract_branch.outputs.branch }}
+        run: echo "${{ steps.extract_branch.outputs.branch }}"
 
       # Runs a set of commands using the runners shell
 #       - name: Push update
