--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -21,22 +21,27 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Update README.md
-        run: echo "another line" >> README.md
-        
       - name: Extract branch name
+        shell: bash
         run: |
           echo "${GITHUB_BASE_REF}"
           echo "${GITHUB_BASE_REF#refs/heads/}"
           echo "##[set-output name=branch;]$(echo ${GITHUB_BASE_REF#refs/heads/})"
         id: extract_branch
+    
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ steps.extract_branch.outputs.branch }}
+
+      # Runs a single command using the runners shell
+      - name: Update README.md
+        run: echo "another line" >> README.md
         
       - name: echo
-        run: echo "${{ steps.extract_branch.outputs.branch }}"
+        run: |
+          echo "${{ steps.extract_branch.outputs.branch }}"
+          echo ${{ steps.extract_branch.outputs.branch }}
 
       # Runs a set of commands using the runners shell
 #       - name: Push update
