--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -37,17 +37,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Update README.md
         run: echo "another line" >> README.md
-        
-      - name: echo
-        run: |
-          echo "${{ steps.extract_branch.outputs.branch }}"
-          echo ${{ steps.extract_branch.outputs.branch }}
 
       # Runs a set of commands using the runners shell
-#       - name: Push update
-#         run: |
-#           git config user.name alex-avila
-#           git config user.email alex.avilx@icloud.com
-#           git add README.md
-#           git commit -m "Update README.md"
-#           git push origin ${{ steps.extract_branch.outputs.branch }}
+      - name: Push update
+        run: |
+          git config user.name alex-avila
+          git config user.email alex.avilx@icloud.com
+          git add README.md
+          git commit -m "Update README.md"
+          git push origin ${{ steps.extract_branch.outputs.branch }}
