--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -45,4 +45,4 @@ jobs:
           git config user.email alex.avilx@icloud.com
           git add README.md
           git commit -m "Update README.md"
-          git push origin ${{ steps.extract_branch.outputs.branch }}
+          git push
