--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -22,27 +22,26 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Extract branch name
-        shell: bash
-        run: |
-          echo "${GITHUB_BASE_REF}"
-          echo "${GITHUB_BASE_REF#refs/heads/}"
-          echo "##[set-output name=branch;]$(echo ${GITHUB_BASE_REF#refs/heads/})"
-        id: extract_branch
+        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_HEAD_REF})"
+
+      # print branch name
+      - name: Get branch name
+        run: echo 'The branch name is' $BRANCH_NAME
     
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ steps.extract_branch.outputs.branch }}
+#       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#       - uses: actions/checkout@v2
+#         with:
+#           ref: ${{ steps.extract_branch.outputs.branch }}
 
-      # Runs a single command using the runners shell
-      - name: Update README.md
-        run: echo "another line" >> README.md
+#       # Runs a single command using the runners shell
+#       - name: Update README.md
+#         run: echo "another line" >> README.md
 
-      # Runs a set of commands using the runners shell
-      - name: Push update
-        run: |
-          git config user.name alex-avila
-          git config user.email alex.avilx@icloud.com
-          git add README.md
-          git commit -m "Update README.md"
-          git push origin HEAD:${{ steps.extract_branch.outputs.branch }}
+#       # Runs a set of commands using the runners shell
+#       - name: Push update
+#         run: |
+#           git config user.name alex-avila
+#           git config user.email alex.avilx@icloud.com
+#           git add README.md
+#           git commit -m "Update README.md"
+#           git push origin HEAD:${{ steps.extract_branch.outputs.branch }}
